<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bthumbnail_background"
    tools:context=".MainActivity"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dip"
        android:layout_height="120dip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/ias_logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="26sp"
        android:id="@+id/title_text"
        android:text="@string/title_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/title_text"
        android:layout_margin="16dip"
        android:fontFamily="sans-serif-medium"
        android:textSize="15sp"
        android:text="@string/for_ias"/>

    <Button
        android:id="@+id/auto_detect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manaul_set_ip_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="AutoConnectDevice"
        android:text="@string/auto_detect_button" />

    <Button
        android:id="@+id/manaul_set_ip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="ManualConnectDevice"
        android:text="@string/manual_detect_button" />

</RelativeLayout>
