<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bthumbnail_background"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:id="@+id/grphic_statusblock"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dip"
            android:layout_marginBottom="16dip"
            android:layout_marginStart="16dip"
            android:id="@+id/pms_status_text"
            android:text="@string/pms_status_text" />

        <ImageView
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_toEndOf="@+id/pms_status_text"
            android:layout_marginTop="16dip"
            android:layout_marginBottom="16dip"
            android:contentDescription="@string/pms_light"
            android:id="@+id/pms_status_light"
            android:src="@drawable/green_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:layout_marginBottom="16dip"
            android:layout_marginStart="50dip"
            android:layout_toEndOf="@+id/pms_status_light"
            android:id="@+id/abf_status_text"
            android:text="@string/abf_status_text" />

        <ImageView
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_toEndOf="@+id/abf_status_text"
            android:layout_marginTop="16dip"
            android:layout_marginBottom="16dip"
            android:contentDescription="@string/abf_light"
            android:id="@+id/abf_status_light"
            android:src="@drawable/green_light"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/abfuellanlage_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/grphic_statusblock"
        android:layout_margin="16dip"
        android:contentDescription="@string/abfuellanlage"
        android:scaleType="fitStart"
        android:src="@drawable/abfuellanlage" />

</RelativeLayout>