<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/about_logo_image"
        android:layout_width="220dp"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ias_logo" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/about_text" />

            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="16dp" />

            <TextView
                android:id="@+id/copyright_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:text="@string/copyright_text" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
