<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bthumbnail_placeholder"
    tools:context="net.icedeer.abysmli.iasanalyse.ComponentDetailsActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dip"
            android:paddingBottom="50dip">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/view_block"
                android:id="@+id/comp_info_block"
                android:layout_marginBottom="16dip"
                android:padding="16dip">

                <TextView
                    android:id="@+id/compt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:id="@+id/compt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/compt_id" />

                <TextView
                    android:id="@+id/compt_ser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/compt_name" />

                <TextView
                    android:id="@+id/compt_typ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/compt_ser" />

                <TextView
                    android:id="@+id/compt_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/compt_typ" />

                <TextView
                    android:id="@+id/compt_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/compt_desc" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/view_block"
                android:id="@+id/err_block"
                android:layout_below="@+id/comp_info_block"
                android:layout_marginBottom="16dip"
                android:padding="16dip">

                <TextView
                    android:id="@+id/err_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/error_info" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/view_block"
                android:id="@+id/server_res_block"
                android:layout_below="@+id/err_block"
                android:layout_marginBottom="16dip"
                android:padding="16dip">

                <TextView
                    android:id="@+id/server_res_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/device_res" />

                <com.db.chart.view.LineChartView
                    android:id="@+id/value_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@+id/server_res_text"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/component_detail_button_block"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/status_button"
            android:layout_marginEnd="16dip"
            android:onClick="status_change"
            android:alpha="0.5"/>

    </RelativeLayout>
</RelativeLayout>
